--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Google Apps Script Embed</title>
   <style>
-    body {
+    html, body {
       margin: 0;
-      font-family: sans-serif;
+      padding: 0;
+      height: 100%;
       background: #f4f4f4;
     }
     iframe {
+      display: block;
       width: 100%;
-      height: 100vh;
+      height: 100%;
       border: none;
     }
   </style>
 </head>
 <body>
-  <!-- Ganti URL di bawah dengan URL Web App Google Apps Script kamu -->
   <iframe src="https://script.google.com/macros/s/AKfycbwcJvYOxzplULvkHRsRz_lg1tiPyR_8P_L1-rTHsEvWSoJWSvjuZHhFjL3rW4o4lm0R/exec"></iframe>
 </body>
 </html>
