--- a/index.html
+++ b/index.html
@@ -1,66 +1,84 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Absensi Guru</title>
-  <style>
-    body{margin:0;padding:20px;font-family:sans-serif;background:#f4f4f4}
-    .form-container{max-width:520px;margin:20px auto;background:#fff;padding:18px;border-radius:8px;box-shadow:0 2px 8px rgba(0,0,0,0.06)}
-    h2{margin:0 0 10px}
-    label{display:block;margin-top:10px;font-size:14px}
-    input,select,textarea,button{width:100%;padding:10px;margin-top:6px;border:1px solid #d0d0d0;border-radius:6px;font-size:14px}
-    button{background:#1976d2;color:#fff;border:none;cursor:pointer}
-    button:active{transform:translateY(1px)}
-    #msg{display:none;margin-top:10px;color:green}
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Data Google Sheet</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background: #007BFF;
+            color: white;
+            text-align: center;
+            padding: 15px;
+            font-size: 20px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            background: white;
+        }
+        th, td {
+            padding: 10px;
+            border: 1px solid #ddd;
+            text-align: left;
+            font-size: 14px;
+        }
+        th {
+            background: #007BFF;
+            color: white;
+        }
+        tr:nth-child(even) {
+            background: #f9f9f9;
+        }
+    </style>
 </head>
 <body>
-  <div class="form-container">
-    <h2>Absensi Guru</h2>
-    <form id="absensiForm">
-      <label>Tanggal</label><input type="date" name="tanggal" required>
-      <label>Nama Guru</label><input type="text" name="nama" placeholder="Nama Lengkap" required>
-      <label>Kehadiran</label>
-      <select name="kehadiran" required>
-        <option value="Hadir">Hadir</option>
-        <option value="Izin">Izin</option>
-        <option value="Sakit">Sakit</option>
-      </select>
-      <label>Jam Datang</label><input type="time" name="jam_datang">
-      <label>Jam Pulang</label><input type="time" name="jam_pulang">
-      <label>Keterangan</label><textarea name="keterangan" rows="3"></textarea>
-      <button type="submit">Kirim</button>
-    </form>
-    <p id="msg">Data berhasil dikirim!</p>
-  </div>
 
-  <script>
-    const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwcJvYOxzplULvkHRsRz_lg1tiPyR_8P_L1-rTHsEvWSoJWSvjuZHhFjL3rW4o4lm0R/exec';
+<header>Data Google Sheet</header>
+<table id="data-table">
+    <thead>
+        <tr id="table-header"></tr>
+    </thead>
+    <tbody id="table-body"></tbody>
+</table>
 
-    document.getElementById('absensiForm').addEventListener('submit', function(e){
-      e.preventDefault();
-      const btn = this.querySelector('button[type="submit"]');
-      btn.disabled = true; btn.textContent = 'Mengirim...';
+<script>
+    const sheetURL = "https://script.google.com/macros/s/AKfycbwcJvYOxzplULvkHRsRz_lg1tiPyR_8P_L1-rTHsEvWSoJWSvjuZHhFjL3rW4o4lm0R/exec";
 
-      const formData = new FormData(this);
-      fetch(SCRIPT_URL, { method: 'POST', body: formData })
-      .then(resp => {
-        if (resp.ok) {
-          document.getElementById('msg').style.display = 'block';
-          this.reset();
-        } else {
-          alert('Gagal mengirim. Coba ulang.');
-        }
-      })
-      .catch(err => {
-        console.error(err);
-        alert('Terjadi kesalahan jaringan. Jika muncul CORS error, beri tahu aku.');
-      })
-      .finally(() => {
-        btn.disabled = false; btn.textContent = 'Kirim';
-      });
-    });
-  </script>
+    fetch(sheetURL)
+        .then(response => response.json())
+        .then(data => {
+            const tableHeader = document.getElementById("table-header");
+            const tableBody = document.getElementById("table-body");
+
+            if (data.length > 0) {
+                // Buat header
+                Object.keys(data[0]).forEach(key => {
+                    const th = document.createElement("th");
+                    th.textContent = key;
+                    tableHeader.appendChild(th);
+                });
+
+                // Isi data
+                data.forEach(row => {
+                    const tr = document.createElement("tr");
+                    Object.values(row).forEach(value => {
+                        const td = document.createElement("td");
+                        td.textContent = value;
+                        tr.appendChild(td);
+                    });
+                    tableBody.appendChild(tr);
+                });
+            }
+        })
+        .catch(error => console.error("Error:", error));
+</script>
+
 </body>
 </html>
