--- a/index.html
+++ b/index.html
@@ -3,19 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Google Sheet</title>
+    <title>Data dari Google Sheets</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
+            padding: 10px;
+            background: #f5f5f5;
         }
-        header {
-            background: #007BFF;
-            color: white;
+        h1 {
             text-align: center;
-            padding: 15px;
             font-size: 20px;
         }
         table {
@@ -24,13 +20,13 @@
             background: white;
         }
         th, td {
-            padding: 10px;
-            border: 1px solid #ddd;
-            text-align: left;
+            border: 1px solid #ccc;
+            padding: 8px;
             font-size: 14px;
+            text-align: left;
         }
         th {
-            background: #007BFF;
+            background: #007bff;
             color: white;
         }
         tr:nth-child(even) {
@@ -39,46 +35,39 @@
     </style>
 </head>
 <body>
+    <h1>Data Google Sheets</h1>
+    <table id="dataTable">
+        <thead></thead>
+        <tbody></tbody>
+    </table>
 
-<header>Data Google Sheet</header>
-<table id="data-table">
-    <thead>
-        <tr id="table-header"></tr>
-    </thead>
-    <tbody id="table-body"></tbody>
-</table>
+    <script>
+        const url = "https://script.google.com/macros/s/AKfycbwcJvYOxzplULvkHRsRz_lg1tiPyR_8P_L1-rTHsEvWSoJWSvjuZHhFjL3rW4o4lm0R/exec";
 
-<script>
-    const sheetURL = "https://script.google.com/macros/s/AKfycbwcJvYOxzplULvkHRsRz_lg1tiPyR_8P_L1-rTHsEvWSoJWSvjuZHhFjL3rW4o4lm0R/exec";
+        fetch(url)
+            .then(res => res.json())
+            .then(data => {
+                if (!data || data.length === 0) return;
 
-    fetch(sheetURL)
-        .then(response => response.json())
-        .then(data => {
-            const tableHeader = document.getElementById("table-header");
-            const tableBody = document.getElementById("table-body");
+                const tableHead = document.querySelector("#dataTable thead");
+                const tableBody = document.querySelector("#dataTable tbody");
 
-            if (data.length > 0) {
-                // Buat header
-                Object.keys(data[0]).forEach(key => {
-                    const th = document.createElement("th");
-                    th.textContent = key;
-                    tableHeader.appendChild(th);
-                });
+                // Buat header tabel
+                const headers = Object.keys(data[0]);
+                let headRow = "<tr>";
+                headers.forEach(h => headRow += `<th>${h}</th>`);
+                headRow += "</tr>";
+                tableHead.innerHTML = headRow;
 
-                // Isi data
+                // Isi data tabel
                 data.forEach(row => {
-                    const tr = document.createElement("tr");
-                    Object.values(row).forEach(value => {
-                        const td = document.createElement("td");
-                        td.textContent = value;
-                        tr.appendChild(td);
-                    });
-                    tableBody.appendChild(tr);
+                    let bodyRow = "<tr>";
+                    headers.forEach(h => bodyRow += `<td>${row[h]}</td>`);
+                    bodyRow += "</tr>";
+                    tableBody.innerHTML += bodyRow;
                 });
-            }
-        })
-        .catch(error => console.error("Error:", error));
-</script>
-
+            })
+            .catch(err => console.error(err));
+    </script>
 </body>
 </html>
