--- a/index.html
+++ b/index.html
@@ -1,47 +1,22 @@
 <!DOCTYPE html>
-<html lang="id">
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Absensi Guru</title>
   <style>
-    /* Reset default margin & padding */
-    html, body {
+    body {
       margin: 0;
       padding: 0;
-      height: 100%;
-      font-family: Arial, sans-serif;
-      background-color: #f7f9fc;
+      height: 100vh;
     }
-
-    /* Wrapper supaya iframe pas di layar */
-    .iframe-wrapper {
-      width: 100%;
-      height: 100vh; /* penuh 1 layar */
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
     iframe {
-      width: 100%;
-      height: 100%;
       border: none;
-    }
-
-    /* Agar di HP tampak maksimal */
-    @media (max-width: 768px) {
-      iframe {
-        height: 100vh;
-      }
+      width: 100%;
+      height: 100vh;
     }
   </style>
 </head>
 <body>
-  <div class="iframe-wrapper">
-    <!-- Ganti URL di bawah dengan URL Web App Google Apps Script kamu -->
-    <iframe src="https://script.google.com/macros/s/AKfycbzdOK7H9aZs7g6QkHgw7ebSsIR-gvqIfmzmH2EYZa61TIcv1UWCdOTutm6w9TQi_IBa/exec" allowfullscreen></iframe>
-  </div>
+  <iframe src="https://script.google.com/macros/s/PASTE_URL_EXEC_KAMU/exec"></iframe>
 </body>
 </html>
