--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Absensi Guru</title>
   <style>
     body {
+      font-family: Arial, sans-serif;
+      background-color: #f7f7f7;
       margin: 0;
       padding: 0;
-      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 100vh;
     }
     iframe {
-      border: none;
       width: 100%;
-      height: 100vh;
+      max-width: 900px;
+      height: 95vh;
+      border: none;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
-  <iframe src="https://script.google.com/macros/s/AKfycbzdOK7H9aZs7g6QkHgw7ebSsIR-gvqIfmzmH2EYZa61TIcv1UWCdOTutm6w9TQi_IBa/exec"></iframe>
+  <iframe src="https://script.google.com/macros/s/AKfycbwM4wNfv87zUuu_co4HkwHuz1QjQ3V_VF9yIlnxL3wIF9YahU00dcMQw2qzLJ8-Htpi/exec"></iframe>
 </body>
 </html>
